--- a/src/move_to_robotpose/package.xml
+++ b/src/move_to_robotpose/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>MoveToRobotPose</name>
+  <name>move_to_robotpose</name>
   <version>0.0.0</version>
-  <description>The MoveToRobotPose package</description>
+  <description>The move_to_robotpose package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/MoveToRobotPose</url> -->
+  <!-- <url type="website">http://wiki.ros.org/move_to_robotpose</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
