--- a/src/panda_robot_control/CMakeLists.txt
+++ b/src/panda_robot_control/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   roscpp
   sensor_msgs
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
